# EmbeddedIntentRecognizer

./: CMakeLists.txt  README.md
IntentRecognizer/: CMakeLists.txt
IntentRecognizer/include/: CsvParser.h  Intent.h  IntentRecognizer.h  RowParser.h
IntentRecognizer/source/: CsvParser.cpp  Intent.cpp  IntentRecognizer.cpp  RowParser.cpp  main.cpp
UnitTest/: CMakeLists.txt  CsvParserTest.cpp  IntentRecognizerTest.cpp  IntentTest.cpp  RowParserTest.cpp  test.cpp
config/: intention.csv
design/: EmbeddedIntentRecognizer.drawio
